--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Independent News Feed</string>
+    <string name="menu_browser">Launch in browser</string>
+    <string name="menu_share">Share</string>
+    <string name="share_with">Share with&#8230;</string>
 </resources>
